# the-spire-of-azael

./: .gitignore  AnsiText.cpp  AnsiText.h  CMakeLists.txt  Character.cpp  Character.h  Game.cpp  Game.h  GameApplication.cpp  GameApplication.h  GameIo.cpp  GameIo.h  GameSaveData.cpp  GameSaveData.h  Item.cpp  Item.h  Player.cpp  Player.h  README.md  Room.cpp  Room.h  SaveDatabase.cpp  SaveDatabase.h  UiAssets.cpp  UiAssets.h  UiFonts.cpp  UiFonts.h  clean_cmake.bat  compile.bat  main.cpp  main_console.cpp
assets/: README.md
resources/: app.rc
scripts/: png_to_ico.ps1
windows/: app.rc
